# openai-chat-cli

./: .gitignore  README.md  chat.py  chat_cli.py  pyproject.toml
