[tool.poetry]
name = "openai-chat-cli"
version = "0.1.0"
description = ""
authors = ["kitsune-udon <kitsune.udon.delicious@gmail.com>"]
readme = "README.md"
packages = [{include = "openai-chat-cli"}]

[tool.poetry.dependencies]
python = "^3.11"
openai = "^0.27.4"
tiktoken = "^0.3.3"
prompt-toolkit = "^3.0.38"

[tool.poetry.group.dev.dependencies]
black = "^23.3.0"
mypy = "^1.2.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
